Se agrega la referencia de la libreria Common

--- a/Empresa.Ecommerce.Infraestructure.Data/Empresa.Ecommerce.Infraestructure.Data.csproj
+++ b/Empresa.Ecommerce.Infraestructure.Data/Empresa.Ecommerce.Infraestructure.Data.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Empresa.Ecommerce.Transversal.Common\Empresa.Ecommerce.Transversal.Common.csproj" />
+  </ItemGroup>
+
 </Project>
